--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
+    "react-star-rating-component": "^1.4.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
