--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
     "chart.js": "^4.3.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -27,16 +27,19 @@
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "vite-plugin-react": "^4.0.1"
   }
 }
