--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chart.js": "^4.3.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.0-beta.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
