--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.2",
+    "emailjs-com": "^3.2.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0-beta.0",
@@ -28,7 +29,9 @@
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
-    "slick-carousel": "^1.8.1"
+    "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
